--- a/MSA/Pages/Index.razor
+++ b/MSA/Pages/Index.razor
@@ -1,5 +1,7 @@
 ﻿@page "/"
+@code{
 
+}
 
 <div class="container utilities-list">
     <div class="row">
@@ -16,7 +18,6 @@
                     tại Việt Nam. Các khách hàng tiêu biểu: Takashimaya, Gigamall, Diamond Plaza, Golden Gate, Circle K…
                 </p>
             </div>
-
         </div>
         <div class="col-sm-6">
             <div class="intro-text pt-2" style="font-size: 20px;">
@@ -172,25 +173,25 @@
                 <a href="/" alt="Tiện ích">KHÁCH HÀNG</a>
             </h1>
         </div>
-        <div class="col-sm-3 image-center">
+        <div class="col-sm-3 col-6 image-center">
             <img src="/images/Customer/gigamall.png" />
         </div>
-        <div class="col-sm-3 image-center">
+        <div class="col-sm-3 col-6 image-center">
             <img src="/images/Customer/golden-gate.png" />
         </div>
-        <div class="col-sm-3 image-center">
+        <div class="col-sm-3 col-6 image-center">
             <img src="/images/Customer/circle-k.png" />
         </div>
-        <div class="col-sm-3 image-center">
+        <div class="col-sm-3 col-6 image-center">
             <img src="/images/Customer/amazing.png" />
         </div>
-        <div class="col-sm-3 image-center">
+        <div class="col-sm-3 col-6 image-center">
             <img src="/images/Customer/mykingdom.jpg" />
         </div>
-        <div class="col-sm-3 image-center">
+        <div class="col-sm-3 col-6 image-center">
             <img src="/images/Customer/takashimaya.png" />
         </div>
-        <div class="col-sm-3 image-center">
+        <div class="col-sm-3 col-6 image-center">
             <img src="/images/Customer/diamond-plaza.png" />
         </div>
     </div>
