--- a/MSA/Shared/_Footer.razor
+++ b/MSA/Shared/_Footer.razor
@@ -15,9 +15,9 @@
                         <p>
                             <img src="/images/location-icon.png"><span>9-11 D52, Phường 12, Quận Tân Bình, Hồ Chí Minh</span>
                         </p><p>
-                            <img src="/images/phone-icon.png"><span>(028) </span>
+                            <img src="/images/phone-icon.png"><span>(028) 38111479</span>
                         </p><p>
-                            <img src="/images/mail-icon.png"><a href="mailto:saomai.admin@ms-apptech.com">saomai.admin@ms-apptech.com</a>
+                            <img src="/images/mail-icon.png"><a href="mailto:info@ms-apptech.com">info@ms-apptech.com</a>
                         </p>
                     </div>
                 </div>
