--- a/MSA/Shared/_Header.razor
+++ b/MSA/Shared/_Header.razor
@@ -11,13 +11,11 @@
                 <div class="info-gigamall-header">
                     <h2>CÔNG TY TIN HỌC ỨNG DỤNG SAO MAI</h2>
                     <p>Email: info@ms-apptech.com</p>
-                    <p>Website: www.ms-apptech.com</p>
-                    <p>Điện thoại: (028)  - (028) </p>
-                    @*<p>240 - 242 Phạm Văn Đồng,<br>P. Hiệp Bình Chánh,&nbsp;Q. Thủ Đức, TP.HCM</p>
-                        <p>Hotline: 028 666 00222 - Email: info@gigamall.com.vn</p>*@
+                    @*<p>Website: www.ms-apptech.com</p>*@
+                    <p>Điện thoại: (028) 38111479</p>
+                    <p>9-11 D52, Phường 12,&nbsp;Quận Tân Bình, TP.HCM</p>
                 </div>
                 <div class="menu">
-
                     <div id="cssmenu">
                         <ul>
                             <li class="active">
@@ -52,5 +50,17 @@
 
     .menu {
         width: 100%;
+    }
+
+
+    @@media (max-width: 576px) {
+        .title-group-home {
+            padding: 20px 0 !important;
+        }
+
+        .logo a img {
+            width: 80px !important;
+            height: 80px !important;
+        }
     }
 </style>
