--- a/MSA/Shared/_Footer.razor
+++ b/MSA/Shared/_Footer.razor
@@ -4,7 +4,7 @@
     }
 </style>
 
-<footer class="p-0">
+<footer id="footer" class="p-0">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -91,3 +91,9 @@
     </div>
     @* <p class="copy-right">© Bản quyền 2022 của Công ty Cổ phần Đầu tư Thương mại Dịch vụ THISO Mall Việt Nam</p>*@
 </footer>
+
+<style>
+    #footer {
+        height: 400px;
+    }
+</style>
