--- a/Study/Views/Home/Index1.cshtml
+++ b/Study/Views/Home/Index1.cshtml
@@ -34,6 +34,7 @@
     <div>
         @TempData["ButtonValue"]
     </div>*@
+<input type="date" class="form-control" />
 <h2 class="text-center">Layout 1</h2>
 <div class="layout">
     <form method="get">
