--- a/MSA/Shared/_Header.razor
+++ b/MSA/Shared/_Header.razor
@@ -18,18 +18,18 @@
                 <div class="menu">
                     <div id="cssmenu">
                         <ul>
-                            <li class="active">
-                                <a href="/">Trang chủ</a>
-                            </li>
-                            <li>
-                                <a href="Tutorial" alt="Chia sẻ kiến thức">Chia sẻ kiến thức</a>
+                            <li class="active-item active">
+                                <a id="mnu-home" href="javascript:void(0)" onclick="goToMenu('home')">Giới thiệu</a>
                             </li>
                             @*<li>
-                                    <a href="javascript:void(0)" onclick="document.getElementById('project').scrollIntoView({behavior:'smooth'})" alt="Dự án">Dự án</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)" onclick="document.getElementById('customer').scrollIntoView({behavior:'smooth'})" alt="Khách hàng">Khách hàng</a>
+                                    <a href="Tutorial" alt="Chia sẻ kiến thức">Chia sẻ kiến thức</a>
                                 </li>*@
+                            <li>
+                                <a id="mnu-project" href="javascript:void(0)" onclick="goToMenu('project')" alt="Dự án">Dự án</a>
+                            </li>
+                            <li>
+                                <a id="mnu-customer" href="javascript:void(0)" onclick="goToMenu('customer')" alt="Khách hàng">Khách hàng</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -49,6 +49,22 @@
         width: 100%;
     }
 
+    .fixed {
+        width: 100%;
+        height: 70px;
+        position: fixed;
+        bottom: 0px;
+        left: 0px;
+        z-index: 1000;
+        background-color: white;
+        text-align: center;
+    }
+
+        .fixed #cssmenu {
+            margin: 15px auto;
+            display: inline-block;
+            float: unset;
+        }
 
     @@media (max-width: 576px) {
         .title-group-home {
