--- a/MSA/wwwroot/css/cssmenu/styles.css
+++ b/MSA/wwwroot/css/cssmenu/styles.css
@@ -86,7 +86,8 @@
     padding: 2px 10px;
     line-height: 38px;
     text-decoration: none;
-    color: #464646;
+    /*color: #464646;*/
+    color: rgba(163,163,163,1);
     font-size: 17.33px;
     -webkit-transition: color .2s ease;
     -moz-transition: color .2s ease;
